# mytradingbot

./: .env.example  .gitignore  AGENT_RULES.md  DONE_CRITERIA.md  README.md  SUCCESS.md  pyproject.toml  pytest.ini  standard operation.md  success_criteria.md
.codex/: environment.md
app/: app.py
app/components/: descriptive_sections.py  runtime.py
app/pages/: 00_Setup_Wizard.py  01_Dashboard.py  02_Strategy_Control.py  03_Data_Management.py  03_Data_and_Training.py  04_Paper_Trading.py  05_Live_Trading.py  06_LLM_Copilot.py  07_Diagnostics.py  08_Settings.py  08_Status_Reference.py  09_Trading_Universe.py
configs/broker/: alpaca.live.yaml  alpaca.paper.yaml
configs/qlib/: daily.yaml  intraday_5min.yaml
configs/risk/: default.yaml
configs/strategies/: intraday.yaml  long_term.yaml  scalping.yaml  short_term.yaml
configs/user_profiles/: alice_trader.json  nathan_1st_test.json
docs/: ARCHITECTURE.md  FIRST_RUN.md  ONE_SHOT_MASTER_BRIEF.md  RELEASE_NOTES_V2.md  RUNBOOK.md  Release Notes - V2.md  USER_MANUAL.md
scripts/: build_qlib_dataset.py  check_alpaca_paper_broker.py  check_training_data_quality.py  generate_top_liquidity_universe.py  generate_trading_universe_audit.py  goalcheck.py  launch_dashboard.py  refresh_predictions.py  reset_local_paper_state.py  run_alpaca_paper_submission_smoke.py  run_alpha_robust_training.py  run_daily_maintenance.py  run_institutional_pipeline.py  run_live_trading.py  run_loop_trading.py  run_paper_trading.py  smoke_test_broker.py  train_models.py  validate_system.py
tests/: __init__.py  conftest.py
(+2459 files in other folders)
