[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytradingbot-next"
version = "0.1.0"
description = "A qlib-first, dashboard-first quant trading platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.1",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=18.0",
  "streamlit>=1.40",
  "plotly>=5.24",
  "typer>=0.12",
  "rich>=13.7",
  "loguru>=0.7.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "ruff>=0.6",
  "mypy>=1.10"
]
broker = [
  "alpaca-py>=0.28"
]
qlib = [
  "pyqlib>=0.9.6"
]
llm = [
  "openai>=1.40"
]
all = [
  "alpaca-py>=0.28",
  "pyqlib>=0.9.6",
  "openai>=1.40"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
